# cpp-ci-dev

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Dockerfile  Dockerfile.windows  MANIFEST.in  README.md  build_executables.sh  calibration_model.py  calibration_model_test.py  compose.yaml  compose_smoke_test.yaml  deployment_manager.py  event_bus.py  example.ipynb  get_sweep_results.py  install.py  main.py  main2.py  main_multithread.py  main_run_with_opc.py  main_utils.py  make_dataset.py  make_offline_transitions.py  make_sweep.py  my_test.py  offline_main.py  policy.py  pyproject.toml  release-please-config.json  req.yaml  requirements.txt  res.yaml  run_tests.py  setup.py  test_1.py  test_2.py  test_3.py  test_buffer_2.py  (+1 more)
corecfg/: README.md  pyproject.toml
corecfg/corecfg/: __init__.py
corecli/: README.md  pyproject.toml
corecli/corecli/: __init__.py  main.py
corecli/tests/: __init__.py  conftest.py  test_http.py  test_main.py
coredinator/: CHANGELOG.md  README.md  pyproject.toml  setup_services.sh
coredinator/coredinator/: app.py  core_service.py  logging_config.py  test_utils.py
coredinator/tests/: conftest.py  test_agent_process.py  test_placeholder.py
coreio/: .coveragerc  CHANGELOG.md  README.md  config.py  dummy_agent.py  main-io.py  main.py  main_io.py  pyproject.toml
coreio-cpp/: .gitignore  CMakeLists.txt  CMakePresets.json
coreio-cpp/coreio/: CMakeLists.txt  hello.cpp  main.cpp
coreio-cpp/include/: hello.h
coreio-cpp/tests/: CMakeLists.txt  hello_test.cpp
coreio/coreio/: config.py  dummy_agent.py  main.py  service.py
coreio/tests/: conftest.py
coreio/utils/: consumer_task.py  io_events.py  opc_communication.py  zmq_communication.py
corerl/: CHANGELOG.md  Dockerfile  README.md  config.py  data.py  main.py  main_utils.py  offline_analysis.py  offline_training.py  output.json  plot_evals.py  plot_metrics.py  pyproject.toml  state.py
corerl/agent/: __init__.py  ac_utils.py  action_schedule.py  base.py  factory.py  greedy_ac.py  greedy_iql.py  inac.py  iql.py  random.py  reinforce.py  sac.py  sarsa.py  simple_ac.py  utils.py
corerl/alerts/: action_value.py  base.py  composite_alert.py  factory.py  gvf.py
corerl/bin_modules/: opc_explorer.tcss  opc_explorer_utils.py
corerl/calib_models/: calib_model.py
corerl/calibration_models/: anytime.py  base.py  buffers.py  factory.py  gru.py  knn.py  one_step.py  one_step_delta.py  simple.py  simple_gru.py  simple_gru_warmup.py  simple_n_step.py  simple_one_step.py  utils.py
corerl/component/: buffer.py  policy_manager.py
corerl/configs/: config.py  errors.py  group.py  loader.py
corerl/corerl/: CHANGELOG.md  config.py  main.py  offline_analysis.py  offline_training.py  plot_metrics.py  service.py  state.py
corerl/data/: __init__.py  base_tc.py  data.py  factory.py  normalizer_utils.py  obs_normalizer.py  transition_creator.py  transition_normalizer.py  utils.py
corerl/data_loaders/: base.py  compose.yaml  data_cleaner.py  data_reader.py  data_writer.py  direct_action.py  direct_action_observation.py  factory.py  simulator.py  transition_load_funcs.py  utils.py
corerl/data_pipeline/: __init__.py  all_the_time.py  base.py  bound_checker.py  bound_checkers.py  data_writer.py  datatypes.py  direct_action.py  factory.py  interaction.py  missing_data_checker.py  missing_data_checkers.py  pipeline.py  pipeline_utils.py  tag_config.py  transition_filter.py  transition_load_funcs.py  utils.py  virtual_tags.py  zones.py
corerl/environment/: bimodal.py  calibration.py  cartpole_env.py  config.py  delayed_saturation.py  distraction_world.py  factory.py  four_rooms.py  influx_opc_env.py  model_env.py  multi_action_saturation.py  pendulum_env.py  pvs.py  registry.py  reseau_env.py  saturation.py  saturation_goals.py  three_tanks.py  three_tanks_v2.py  windy_room.py
corerl/eval/: __init__.py  action_gap.py  actions.py  actor_critic.py  agent.py  alerts.py  base_eval.py  composite_eval.py  config.py  coverage.py  curvature.py  data_report.py  endo_obs.py  ensemble.py  envfield.py  eval_writer.py  evals.py  factory.py  hindsight_return.py  ibe.py  metrics.py  monte_carlo.py  policy_improvement.py  q_estimation.py  raw_data.py  reward.py  simple_eval.py  state.py  tde.py  test_loss.py  torch.py  trace_alerts.py  train_loss.py  uncertainty_alerts.py  writer.py  xy_metrics.py
corerl/experiment/: config.py
corerl/interaction/: anytime_interaction.py  base.py  configs.py  deployment_interaction.py  factory.py  interaction.py  normalizer.py  normalizer_utils.py  offline_anytime.py  sim_interaction.py  timed_interaction.py
corerl/messages/: client.py  consumer.py  event_bus.py  events.py  factory.py  heartbeat.py  scheduler.py  server.py
corerl/models/: base.py  dummy.py  factory.py
corerl/offline/: utils.py
corerl/prediction/: gvf.py  one_step_model.py
corerl/sql_logging/: alt_base_schema.py  base_schema.py  sql_logging.py  sql_logging_example.py  utils.py
corerl/state_constructor/: __init__.py  base.py  components.py  examples.py  factory.py
corerl/tests/: conftest.py
corerl/utils/: asyncio.py  buffered_sql_writer.py  coreio.py  device.py  dict.py  docker.py  evaluator.py  freezer.py  gym.py  gymnasium.py  hooks.py  hydra.py  list.py  math.py  maybe.py  multithreading.py  nullable.py  offline.py  opc_connection.py  pandas.py  pickle.py  plotting.py  processes.py  random.py  sweep.py  sympy.py  time.py  torch.py  types.py
corerl/web/: agent_manager.py  app.py
coretelemetry/: CHANGELOG.md  README.md  pyproject.toml
coretelemetry/coretelemetry/: app.py  exceptions.py  services.py  system_metrics.py
coretelemetry/tests/: __init__.py  conftest.py  test_basic.py
libs/lib_agent/: pyproject.toml
libs/lib_defs/: README.md  (+1 more)
projects/: pyproject.toml
research/: .gitignore  README.md  compose.yaml  dashboard.json  pyproject.toml  safety_risk_assessment.md
test/: .gitignore  Dockerfile  conftest.py  output_conf.py  pyproject.toml  test_alt_orm_schema.py  test_buffer.py  test_env_wrapper.py  test_orm_schema.py  test_sc.py  test_tc.py
(+2111 files in other folders)
