[project]
name = "product"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "corerl",
    "coreio",
    "projects",
    "test",
]

[dependency-groups]
dev = [
    "boto3>=1.36.7",
    "debugpy>=1.8.12",
    "docker>=7.1.0",
    "filelock>=3.17.0",
    "pip>=25.0",
    "pre-commit>=4.1.0",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-coverage>=0.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "rlevaluation>=1.1.0",
    "ruff>=0.9.3",
    "seaborn>=0.13.2",
    "uv>=0.5.24",
    "pylint>=3.3.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool]

[tool.setuptools.packages.find]
where = [".", "vendor"]
include = ["corerl*", "coreenv*", "coreio*", "projects*"]

[tool.setuptools.package-dir]
"coreenv" = "vendor/core-env"

[tool.uv.workspace]
members = [
    "corerl",
    "coreio",
    "projects",
    "test",
]

[tool.uv.sources]
corerl = { workspace = true }
coreio = { workspace = true }
projects = { workspace = true }
test = { workspace = true }

# ----------
# -- Ruff --
# ----------

[tool.ruff]
line-length = 120
exclude = [
    '.worktree/',
    'projects/drayton_valley/workaround/'
]

[tool.ruff.lint]
select = ['F', 'E', 'W', 'B', 'I']
ignore = [
    'E402',

    # multiple statements on one line. Incompatible with:
    # if cond: break
    'E701',

    # syntax error in forward declaration - incompatible with jaxtyping
    'F722',
]

[tool.ruff.format]
quote-style = "double"

# -------------
# -- Pyright --
# -------------

[tool.pyright]
include = ['.']
exclude = [
    '.venv/',
    'corerl/sql_logging/examples',
    '.worktree/',
]
venvPath = '.'
venv = '.venv'
typeCheckingMode = 'standard'

# common overrides
useLibraryCodeForTypes = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
enableReachabilityAnalysis = true

# stricter overrides
reportInconsistentConstructor = true
reportMissingParameterType = true
reportUnnecessaryCast = true
reportUnnecessaryIsInstance = true
reportUnusedClass = true
reportUnusedExpression = true
reportUnusedFunction = true

# ------------
# -- Pylint --
# ------------

[tool.pylint]
[tool.pylint.main]
jobs = 0

[tool.pylint.format]
indent-after-paren = 4
max-line-length = 140
max-module-lines = 1000

[tool.pylint."messages control"]
disable = [
    "abstract-method",
    "arguments-differ",
    "arguments-renamed",
    "bare-except",
    "broad-exception-caught",
    "broad-exception-raised",
    "consider-using-from-import",
    "consider-using-with",
    "cyclic-import",
    "duplicate-code",
    "fixme",
    "global-statement",
    "import-error",
    "import-outside-toplevel",
    "inconsistent-return-statements",
    "invalid-name",
    "invalid-overridden-method",
    "line-too-long",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "logging-too-many-args",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "multiple-statements",
    "no-else-continue",
    "no-else-return",
    "no-member",
    "no-name-in-module",
    "no-value-for-parameter",
    "non-ascii-name",
    "not-callable",
    "pointless-string-statement",
    "possibly-used-before-assignment",
    "protected-access",
    "raise-missing-from",
    "redefined-builtin",
    "redefined-outer-name",
    "redundant-u-string-prefix",
    "self-assigning-variable",
    "signature-differs",
    "simplifiable-if-statement",
    "subprocess-run-check",
    "super-init-not-called",
    "super-with-arguments",
    "superfluous-parens",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-statements",
    "unbalanced-tuple-unpacking",
    "unidiomatic-typecheck",
    "unknown-option-value",
    "unnecessary-comprehension",
    "unnecessary-dunder-call",
    "unnecessary-ellipsis",
    "unnecessary-lambda",
    "unpacking-non-sequence",
    "unspecified-encoding",
    "unsubscriptable-object",
    "unused-argument",
    "unused-variable",
    "use-a-generator",
    "useless-import-alias",
    "useless-object-inheritance",
    "useless-parent-delegation",
    "warnings.warn",
    "wrong-import-order",
    "wrong-import-position",
]

# --------------
# -- Deadcode --
# --------------

[tool.deadcode]
exclude = [".venv", "docs", "test"]
ignore-names = ["_*"]
ignore-names-in-files = []

# ----------------
# -- Commitizen --
# ----------------

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

# --------------
# -- Coverage --
# --------------

[tool.coverage.run]
omit = ["test/*"]
concurrency = ["thread", "multiprocessing"]
