[project]
name = "corecfg"
version = "0.1.0"
description = "Configuration service for the RLTune platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lib-config",
    "lib-defs",
    "pydantic~=2.9",
    "pyyaml~=6.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-xdist>=3.7.0",
    "pytest-timeout>=2.4.0",
    "pytest-coverage>=0.0",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.11.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["corecfg"]

[tool.uv.sources]
test = { path = "../test", editable = true }
lib-defs = { path = "../libs/lib_defs", editable = true }
lib-config = { path = "../libs/lib_config", editable = true }

[tool.pyright]
extends='../standards/python/pyright.toml'
include = ['.']
exclude = [
    '.venv/',
]
venvPath = '.'

[tool.ruff]
extend = "../standards/python/ruff.toml"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
