[project]
name = "coredinator"
version = "0.142.0"
description = ""
requires-python = "==3.13.0"
authors = []
dependencies = [
    "fastapi[standard]~=0.116.1",
    "sqlalchemy~=2.0",
    "sqlalchemy-utils~=0.41",
    "lib-config",
    "lib-utils",
    "backoff>=2.2.1",
    "psutil>=6.0.0",
]
readme = "README.md"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "pytest-coverage>=0.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.7.0",
    "requests>=2.25.0",
    "ruff>=0.11.11",
    "uv>=0.7.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
[tool.hatch.build.targets.wheel]
packages = ["coredinator"]

[tool.uv.sources]
lib-config = { path = "../libs/lib_config", editable = true }
lib-utils = { path = "../libs/lib_utils", editable = true }

# ----------
# -- Ruff --
# ----------

[tool.ruff]
extend = "../standards/python/ruff.toml"
exclude = [
    '.worktree/',
]

# -------------
# -- Pyright --
# -------------

[tool.pyright]
extends='../standards/python/pyright.toml'
include = ['.']
exclude = [
    '.venv/',
    '.worktree/',
]
venvPath = '.'

# ------------
# -- Pylint --
# ------------

[tool.pylint]
[tool.pylint.main]
jobs = 0

[tool.pylint.format]
indent-after-paren = 4
max-line-length = 140
max-module-lines = 1000

[tool.pylint."messages control"]
disable = [
    "abstract-method",
    "arguments-differ",
    "arguments-renamed",
    "bare-except",
    "broad-exception-caught",
    "broad-exception-raised",
    "consider-using-from-import",
    "consider-using-with",
    "cyclic-import",
    "duplicate-code",
    "fixme",
    "global-statement",
    "import-error",
    "import-outside-toplevel",
    "inconsistent-return-statements",
    "invalid-name",
    "invalid-overridden-method",
    "line-too-long",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "logging-too-many-args",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "multiple-statements",
    "no-else-continue",
    "no-else-return",
    "no-member",
    "no-name-in-module",
    "no-value-for-parameter",
    "non-ascii-name",
    "not-callable",
    "pointless-string-statement",
    "possibly-used-before-assignment",
    "protected-access",
    "raise-missing-from",
    "redefined-builtin",
    "redefined-outer-name",
    "redundant-u-string-prefix",
    "self-assigning-variable",
    "signature-differs",
    "simplifiable-if-statement",
    "subprocess-run-check",
    "super-init-not-called",
    "super-with-arguments",
    "superfluous-parens",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-statements",
    "unbalanced-tuple-unpacking",
    "unidiomatic-typecheck",
    "unknown-option-value",
    "unnecessary-comprehension",
    "unnecessary-dunder-call",
    "unnecessary-ellipsis",
    "unnecessary-lambda",
    "unpacking-non-sequence",
    "unspecified-encoding",
    "unsubscriptable-object",
    "unused-argument",
    "unused-variable",
    "use-a-generator",
    "useless-import-alias",
    "useless-object-inheritance",
    "useless-parent-delegation",
    "warnings.warn",
    "wrong-import-order",
    "wrong-import-position",
]

# --------------
# -- Deadcode --
# --------------

[tool.deadcode]
exclude = [".venv", "tests"]
ignore-names = ["_*"]
ignore-names-in-files = []

# ----------------
# -- Commitizen --
# ----------------

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

# --------------
# -- Coverage --
# --------------

[tool.coverage.run]
omit = ["tests/*"]
concurrency = ["thread", "multiprocessing"]
