[project]
name = "coreio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncua>=1.1.6",
    "backoff>=2.2.1",
    "lib-config",
    "lib-defs",
]

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "pyright>=1.1.401",
    "pytest-asyncio>=1.0.0",
    "pytest-xdist>=3.7.0",
    "ruff>=0.11.12",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coreio"]

[tool.uv.sources]
test = { path = "../test", editable = true }
lib-config = { path = "../libs/lib_config", editable = true }
lib-defs = { path = "../libs/lib_defs", editable = true }

[tool.pyright]
extends='../standards/python/pyright.toml'
include = ['.']
exclude = [
    '.venv/',
]
venvPath = '.'

[tool.ruff]
extend = "../standards/python/ruff.toml"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
