[tool]
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

# If the vendor directory exists and contains coreenv dependency
# this will be included in our generated wheel. Otherwise coreenv
# will need to be installed manually prior to corerl. This is necessary
# to support our docker image for running corerl.
[tool.setuptools.packages.find]
include = ["corerl"]

[tool.uv.sources]
coreenv = { git = "ssh://gh-rlcore/rlcoretech/core-env.git" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "corerl"
version = "0.142.0"
description = ""
requires-python = ">=3.13,<3.14"
authors = []
dependencies = [
    "asyncua~=1.0",
    "backoff~=2.2.1",
    "boto3~=1.35",
    "casadi~=3.6",
    "cloudpathlib[s3]~=0.20",
    "discrete-dists~=1.0",
    "fastapi[standard]~=0.115.6",
    "gymnasium~=1.0",
    "influxdb_client~=1.39",
    "jaxtyping~=0.2",
    "matplotlib~=3.8",
    "nltk~=3.8",
    "numba~=0.60",
    "numpy~=2.0",
    "pandas~=2.2",
    "pandas-stubs~=2.2",
    "pydantic~=2.9",
    "pygame~=2.5",
    "pyyaml~=6.0",
    "requests~=2.31",
    "scipy~=1.13",
    "sqlalchemy~=2.0",
    "sqlalchemy-utils~=0.41",
    "tabulate~=0.9.0",
    "torch~=2.5",
    "tqdm~=4.66",
    "scikit-learn~=1.5",
    "psycopg2-binary~=2.9",
    "pyzmq~=26.4.0",
]
readme = "README.md"

[project.scripts]
coreio_main = "coreio.main_io:main"
corerl_main = "corerl.main:main"
corerl_convertdb_backup = "corerl.bin.convert_db_backup:main"
corerl_agent_step = "corerl.bin.corerl_step_cli:main"
corerl_start_web = "corerl.bin.start_web_app:main"
