[project]
name = "corerl"
version = "0.147.0"
description = ""
requires-python = "==3.13.0"
authors = []
dependencies = [
    "discrete-dists~=1.0",
    "numba~=0.60",
    "numpy~=2.0",
    "pandas~=2.2",
    "pandas-stubs~=2.2",
    "pydantic~=2.9",
    "pyyaml~=6.0",
    "scipy~=1.13",
    "sqlalchemy~=2.0",
    "sqlalchemy-utils~=0.41",
    "tabulate~=0.9.0",
    "scikit-learn~=1.5",
    "psycopg2-binary~=2.9",
    "pyzmq~=27.1.0",
    "coreio",
    "sympy~=1.14",
    "lib-agent",
    "lib-config",
    "lib-sql",
    "lib-utils[jax]",
    "lib-defs",
]
readme = "README.md"

[dependency-groups]
dev = [
    "rl_env",
    "boto3~=1.35",
    "cloudpathlib[s3]~=0.20",
    "docker>=7.1.0",
    "gymnasium~=1.0",
    "matplotlib~=3.8",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "pytest-coverage>=0.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.7.0",
    "ruff>=0.11.11",
    "test",
    "uv~=0.7",
    "pytest-benchmark>=5.1.0",
]

[project.scripts]
corerl_main = "corerl.main:main"
corerl_convertdb_backup = "corerl.bin.convert_db_backup:main"
corerl_agent_step = "corerl.bin.corerl_step_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
[tool.hatch.build.targets.wheel]
packages = ["corerl"]

[tool.uv.sources]
test = { path = "../test", editable = true }
coreio = { path = "../coreio", editable = true }
rl_env = { path = "../libs/rl_env", editable = true }
lib-agent = { path = "../libs/lib_agent", editable = true }
lib-config = { path = "../libs/lib_config", editable = true }
lib-sql = { path = "../libs/lib_sql", editable = true }
lib-utils = { path = "../libs/lib_utils", editable = true }
lib-defs = { path = "../libs/lib_defs", editable = true }

# ----------
# -- Ruff --
# ----------

[tool.ruff]
extend = "../standards/python/ruff.toml"
exclude = [
    '.worktree/',
]

# -------------
# -- Pyright --
# -------------

[tool.pyright]
extends='../standards/python/pyright.toml'
include = ['.']
exclude = [
    '.venv/',
    '.worktree/',
]
venvPath = '.'

# ------------
# -- Pylint --
# ------------

[tool.pylint]
[tool.pylint.main]
jobs = 0

[tool.pylint.format]
indent-after-paren = 4
max-line-length = 140
max-module-lines = 1000

[tool.pylint."messages control"]
disable = [
    "abstract-method",
    "arguments-differ",
    "arguments-renamed",
    "bare-except",
    "broad-exception-caught",
    "broad-exception-raised",
    "consider-using-from-import",
    "consider-using-with",
    "cyclic-import",
    "duplicate-code",
    "fixme",
    "global-statement",
    "import-error",
    "import-outside-toplevel",
    "inconsistent-return-statements",
    "invalid-name",
    "invalid-overridden-method",
    "line-too-long",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "logging-too-many-args",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "multiple-statements",
    "no-else-continue",
    "no-else-return",
    "no-member",
    "no-name-in-module",
    "no-value-for-parameter",
    "non-ascii-name",
    "not-callable",
    "pointless-string-statement",
    "possibly-used-before-assignment",
    "protected-access",
    "raise-missing-from",
    "redefined-builtin",
    "redefined-outer-name",
    "redundant-u-string-prefix",
    "self-assigning-variable",
    "signature-differs",
    "simplifiable-if-statement",
    "subprocess-run-check",
    "super-init-not-called",
    "super-with-arguments",
    "superfluous-parens",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-statements",
    "unbalanced-tuple-unpacking",
    "unidiomatic-typecheck",
    "unknown-option-value",
    "unnecessary-comprehension",
    "unnecessary-dunder-call",
    "unnecessary-ellipsis",
    "unnecessary-lambda",
    "unpacking-non-sequence",
    "unspecified-encoding",
    "unsubscriptable-object",
    "unused-argument",
    "unused-variable",
    "use-a-generator",
    "useless-import-alias",
    "useless-object-inheritance",
    "useless-parent-delegation",
    "warnings.warn",
    "wrong-import-order",
    "wrong-import-position",
]

# --------------
# -- Deadcode --
# --------------

[tool.deadcode]
exclude = [".venv", "tests"]
ignore-names = ["_*"]
ignore-names-in-files = []

# ----------------
# -- Commitizen --
# ----------------

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

# --------------
# -- Coverage --
# --------------

[tool.coverage.run]
omit = ["tests/*"]
concurrency = ["thread", "multiprocessing"]
